<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="mjkarbasian.moshtarimadar.SettingsActivity$CostSettingActivity"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_cost" />
    <header
        android:fragment="mjkarbasian.moshtarimadar.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_tax" />
    <header
        android:fragment="mjkarbasian.moshtarimadar.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_payment" />
    <header
        android:fragment="mjkarbasian.moshtarimadar.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_customer" />
    <header
        android:fragment="mjkarbasian.moshtarimadar.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_backup" />
    <header
        android:fragment="mjkarbasian.moshtarimadar.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_import_data" />
    <header
        android:fragment="mjkarbasian.moshtarimadar.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_kaseb" />

    <header
        android:fragment="mjkarbasian.moshtarimadar.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />



</preference-headers>
