<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/input_birth_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_birth_day"
                android:inputType="date" />

            <Spinner
                android:id="@+id/input_state_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/input_phone_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_mobile"
                android:inputType="phone" />

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/input_phone_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_work"
                android:inputType="phone" />

            <EditText
                android:id="@+id/input_phone_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_home"
                android:inputType="phone" />

            <EditText
                android:id="@+id/input_phone_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_other"
                android:inputType="phone" />

            <EditText
                android:id="@+id/input_phone_fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_fax"
                android:inputType="phone" />

            <EditText
                android:id="@+id/input_address_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address_country"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_address_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address_city"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_address_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address_street"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_address_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address_postal_code"
                android:inputType="textPostalAddress" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>