<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_button"
        android:icon="@drawable/search"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/sort_button"
        android:icon="@drawable/sort"
        android:title="@string/sort_title"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_sort_newest"
                android:title="@string/sort_alphabetic" />
            <item
                android:id="@+id/menu_sort_rating"
                android:title="@string/sort_membership" />
        </menu>
    </item>
</menu>
