<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search_button"
        android:title="@string/search_title"
        android:icon="@drawable/search"
        app:showAsAction="always"
        android:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/sort_button"
        android:icon="@drawable/sort"
        android:title="@string/sort_title"
        app:showAsAction="always"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_sort_code"
                android:title="@string/sort_product_code" />
            <item
                android:id="@+id/menu_sort_name"
                android:title="@string/sort_name" />
        </menu>
    </item>
</menu>
