<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/add_payment_for_sale_text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_payment_amount" />

    <EditText
        android:id="@+id/input_buy_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_due_date"
        android:inputType="date" />

    <Spinner
        android:id="@+id/input_payment_method_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/add_payment_for_sale_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_payment_for_sale_text1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="51dp"
        android:text="@string/Add" />

</LinearLayout>